# kindness

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  lcov.info  tarpaulin.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: build.yml  publish.yml  release.yml  test.yml
benches/: criterion_benchmark.rs  iai_benchmark.rs  my_benchmark.rs  uniform_benchmark.rs
examples/: README.md  my_example.rs
src/: choice_iterator.rs  chooser.rs  coin_flipper.rs  lib.rs  uniform.rs  unique.rs
src/snapshots/: kindness__coin_flipper__tests__differences.snap  kindness__coin_flipper__tests__distribution.snap  kindness__tests__choose_unique_by_key.snap  kindness__tests__random_element_unhinted.snap  kindness__tests__random_element_windowed.snap  kindness__tests__random_element_with_size_hint.snap  kindness__tests__random_element_with_size_hint.snap.new  kindness__tests__random_element_without_size_hint.snap  kindness__tests__random_max.snap  kindness__tests__random_max_by.snap  kindness__tests__random_max_by_key.snap  kindness__tests__random_min.snap  kindness__tests__random_min_by.snap  kindness__tests__random_min_by_key.snap  kindness__uniform__tests__generate_1.snap  kindness__uniform__tests__generate_10.snap  kindness__uniform__tests__generate_100.snap  kindness__uniform__tests__generate_16.snap  kindness__uniform__tests__generate_2.snap  kindness__uniform__tests__generate_8.snap
