[package]
name = "kindness"
version = "0.4.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
description = "Methods for returning random elements from an iterator."
documentation = "https://docs.rs/kindness"
repository = "https://github.com/wainwrightmark/kindness"
readme = "README.md"
keywords = ["random", "iterator", "min", "max"
            ]
categories = [
    # "api-bindings"
]
license = "MIT"
edition = "2021"
exclude = [
    # (optional) list any files we don't want to publish to crates.io
    # for example, assume the below is a folder which contains large `mp4` files:
    #   "examples/assets"
]

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.14.0"
rand = {version = "0.8.5", default-features = false}

[dev-dependencies]
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9.4"
rand = {version = "0.8.5"}
insta = "1.21.1" # default features needed for testing
criterion = "0.5"

[[bench]]
name = "my_benchmark"
harness = false

[features]
std = []
