[package]
name = "kindness"
version = "0.5.0"
authors = ["Mark Wainwright <wainwrightml@gmail.com>"]
description = "Methods for returning random elements from an iterator."
documentation = "https://docs.rs/kindness"
repository = "https://github.com/wainwrightmark/kindness"
readme = "README.md"
keywords = ["random", "iterator", "min", "max"
            ]
categories = [
    # "api-bindings"
]
license = "MIT"
edition = "2021"
exclude = [
]

# See here for more info: https://blog.rust-lang.org/2020/03/15/docs-rs-opt-into-fewer-targets.html

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
allocator-api2 ={version = "0.2", optional = true, default-features=false}
hashbrown = {version = "0.15", optional=true, default-features = false, features = ["allocator-api2"]}
rand = {version = "0.8", default-features = false}

[dev-dependencies]
# version_sync: to ensure versions in `Cargo.toml` and `README.md` are in sync
version-sync = "0.9"
rand = {version = "0.8"}
insta = "1" # default features needed for testing
criterion = "0.5"
hashbrown = {version = "0.15" , default-features = false, features = ["allocator-api2", "default-hasher"]}
allocator-api2 ={version = "0.2", default-features=false}
iai-callgrind = "0.10.2"
ahash = "0.8"


[[bench]]
name = "criterion_benchmark"
harness = false

[[bench]]
name = "uniform_benchmark"
harness = false

[[bench]]
name = "iai_benchmark"
harness = false

[profile.bench]
debug = true

[features]
std = []
hashbrown =["dep:hashbrown", "dep:allocator-api2"]
